/*
 * $Id: ChangeLog,v 1.6084 2008/05/06 11:24:42 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-05-07 12:00 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * make_b32.bat
  * make_dc.bat
  * make_gc.bat
  * make_pc.bat
  * make_vc.bat
  * make_w32.bat
  * make.bat
    ! missing delimiters: "MAKEALL" -> "%MAKEALL%"
    ! default build directed to Core mode
    ! add switch "/?" for syntax info

2008-05-06 18:20 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  - makallbc.bat
  - makallpc.bat
  - makallvc.bat
    ! removed, the functions have been replaced by the following commands:
      make_b32 all (makallbc)
      make_vc  all (makallpc)
      make_pc  all (makallvc)

2008-05-06 12:51 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbstack.h
  * source\vm\estack.c
  * source\vm\fm.c
    * fixed comments
    + Added hb_stackTotalItems() instead of use directly HB_VM_STACK.wItems

  * source\vm\classes.c
    + Added __Getmembers( oObject, nMsgList, nScope, nType ) to obtain an array of members object no duplicated.

  * source\vm\extend.c
  * source\vm\hvm.c
    * Trace corrections.

  * source\vm\garbage.c
    + Added HB_GCALLOCATED() that returns, the number items allocated at GC.


2008-05-06 12:50 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  - hrbdll.bc
  - hrbdll.dc
  - hrbdll.gc
  - hrbdll.vc
  - hrbdll.wc
  - contrib.bc
  - contrib.dc
  - contrib.gc
  - contrib.vc
  - contrib.wc
  - cont_b32.bat
  - cont_dc.bat
  - cont_gc.bat
  - cont_pc.bat
  - cont_vc.bat
  - cont_w32.bat
  - dll_b32.bat
  - dll_dc.bat
  - dll_gc.bat
  - dll_pc.bat
  - dll_vc.bat
  - dll_w32.bat
    ! removed.

  * common.mak
  * compile.mak
  * contrib.pc
  * hrbdll.pc
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
  * make_b32.bat
  * make_dc.bat